[tool.poetry]
name = "slm-optimization-pipeline"
version = "0.1.0"
description = "A Kubeflow pipeline for building, optimizing, and evaluating SLMs for automotive use cases on Vertex AI."
authors = [
    "Dr. Jens Kohl <jens.kohl@bmw.de>",
    "Dr. Michael Menzel <michaelmenzel@google.com>",
    "Marcel Gotza <mgotza@google.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-pipeline-components = ">=2.10.0"
kfp = ">=2.0.0"
google-cloud-aiplatform = ">=1.49.0"
google-cloud-storage = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"